...





        <EditText
            android:id="@+id/message_content"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_alignParentLeft="true"
            android:layout_toLeftOf="@id/send_message_button"
            android:layout_toStartOf="@id/send_message_button"
            android:ems="10"
            android:hint="@string/hint_greeting"
            android:maxLength="1000"
            android:inputType="textMultiLine" />

...
