...
    <string name="save">Save</string>
    <string name="offer_name">Offer name:</string>
    <string name="offer_description">Description:</string>
    <string name="offer_picture">Picture:</string>
    <string name="create_new_offer">Create new offer</string>
    <string name="button_create_offer">Create offer</string>
    <string name="show_offer_title">Show offer</string>
    <string name="error_create_offer">The name and the description cannot be empty.</string>
    <string name="name">Name:</string>
    <string name="username_presentation">Username:</string>
    <string name="mail">Mail:</string>
    <string name="create_account">Create Account</string>
    <string name="error_create_offer_invalid">The name and the description can\'t be empty.</string>
...
    <string name="remove_favorite_question">Do you really want to remove your approval?</string>
    <string name="tmp_file_suppression_error">Temporary file couldn\'t be removed</string>
    <string name="close_the_offer">Close the offer</string>
    <string name="the_offer_is_closed">The offer is closed.</string>
    <string name="presentation">Welcome to Polytroc, please put your username. You can change your picture, your description and many other things after this step.</string>
    <string name="network_error">No internet connection</string>
    <string name="open_discussion">Open discussion</string>
    <string name="hint_greeting">You can now send messages to each other</string>
    <string name="search">Search title</string>
    <string name="closed">closed</string>
    <string name="open">open</string>
    <string name="old_offer_found">Old offer found</string>
    <string name="restore_offer_message">You already started creating an offer. Do you want to continue to edit it?</string>
...
