<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusableInTouchMode="true"
            android:noHistory="true">

            <TextView
                android:id="@+id/show_offer_author"
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:layout_marginStart="50dp"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="20dp"
                android:text="@android:string/untitled"
                android:textColor="@color/offer_list_author"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/show_offer_title" />

            <TextView
                android:id="@+id/show_offer_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@android:string/untitled"
                android:textColor="@color/offer_list_author"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="@+id/show_offer_picture"
                app:layout_constraintTop_toBottomOf="@+id/show_offer_picture" />

            <TextView
                android:id="@+id/show_offer_title"
                android:layout_width="322dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:textColor="@color/offer_list_name"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/saved_location_offer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="20dp"
                app:layout_constraintEnd_toStartOf="@+id/show_offer_tag"
                app:layout_constraintStart_toEndOf="@+id/show_offer_author"
                app:layout_constraintTop_toBottomOf="@+id/show_offer_title" />

            <TextView
                android:id="@+id/show_offer_description"
                android:layout_width="322dp"
                android:layout_height="0dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/show_offer_date" />


            <ImageView
                android:id="@+id/show_offer_picture"
                android:layout_width="283dp"
                android:layout_height="200dp"
                android:layout_marginTop="4dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.386"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/show_offer_author"
                tools:srcCompat="@tools:sample/backgrounds/scenic" />

            <TextView
                android:id="@+id/show_offer_tag"
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="50dp"
                android:layout_marginRight="50dp"
                android:text="@android:string/unknownName"
                android:textColor="@color/offer_list_author"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/show_offer_title" />

            <TextView
                android:id="@+id/show_offer_views"
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@android:string/untitled"
                android:textColor="@color/offer_list_author"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/show_offer_description" />

            <View
                android:id="@+id/line"
                android:layout_width="200dp"
                android:layout_height="2dp"
                android:layout_marginTop="16dp"
                android:background="?attr/colorPrimaryDark"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/show_offer_views" />

            <LinearLayout
                android:id="@+id/list_answers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/line">

                <TextView
                    android:id="@+id/offer_is_closed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/the_offer_is_closed"
                    android:layout_marginBottom="10dp"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/open_discussion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/btn_slightly_rounded"
                    android:drawableLeft="@drawable/ic_comment_black_24dp"
                    android:drawablePadding="8dp"
                    android:text="@string/open_discussion"
                    android:textAllCaps="false"
                    android:textColor="@android:color/black"
                    android:theme="@style/ButtonTheme"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/error_message"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_load_error"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="15sp"
                    android:textStyle="italic"
                    android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
                    android:visibility="gone" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/answers_recycler_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <RelativeLayout
                    android:id="@+id/offer_buttons"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal">

                    <Button
                        android:id="@+id/react_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:background="@drawable/btn_slightly_rounded"
                        android:drawableLeft="@drawable/ic_comment_black_24dp"
                        android:drawablePadding="8dp"
                        android:text="@string/add_answer"
                        android:textAllCaps="false"
                        android:textColor="@android:color/black"
                        android:theme="@style/ButtonTheme" />

                    <Button
                        android:id="@+id/close_offer_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginLeft="4dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:layout_toRightOf="@+id/react_button"
                        android:background="@drawable/btn_slightly_rounded"
                        android:drawableLeft="@drawable/ic_close_black_24dp"
                        android:drawablePadding="8dp"
                        android:text="@string/close_the_offer"
                        android:textAllCaps="false"
                        android:textColor="@android:color/black"
                        android:theme="@style/ButtonTheme"
                        android:visibility="gone" />
                </RelativeLayout>

            </LinearLayout>

        </android.support.constraint.ConstraintLayout>
</android.support.v4.widget.NestedScrollView>