<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:layout_marginLeft="16dp"
    android:layout_marginTop="16dp">

    <LinearLayout
        android:id="@+id/user_info"
        android:layout_width="@dimen/user_info_width"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/your_user_pic"
            android:layout_width="@dimen/user_picture_small_diameter"
            android:layout_height="@dimen/user_picture_small_diameter"
            android:contentDescription="@string/userpicture" />

        <TextView
            android:id="@+id/your_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


    </LinearLayout>

    <EditText
        android:id="@+id/your_answer_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_toRightOf="@id/user_info"
        android:layout_toLeftOf="@id/post_button"
        android:ems="10"
        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/post_button"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_marginTop="16dp"
        android:layout_alignParentRight="true"
        android:background="@drawable/btn_slightly_rounded"
        android:text="@string/post" />

</RelativeLayout>